--- a/custom_components/muslim-prayer-companion/manifest.json
+++ b/custom_components/muslim-prayer-companion/manifest.json
@@ -3,6 +3,7 @@
   "name": "Muslim Prayer Companion",
   "codeowners": ["@amaharek"],
   "config_flow": true,
+  "issue_tracker": "https://github.com/amaharek/Muslim-Prayer-Companion/issues",
   "documentation": "https://github.com/amaharek/Muslim-Prayer-Companion",
   "iot_class": "cloud_polling",
   "loggers": ["prayer_times_calculator_ie"],
