--- a/custom_components/muslim-prayer-companion/manifest.json
+++ b/custom_components/muslim-prayer-companion/manifest.json
@@ -1,11 +1,12 @@
 {
   "domain": "muslim-prayer-companion",
   "name": "Muslim Prayer Companion",
-  "codeowners": ["@amaharek"],
+  "codeowners": [
+    "@amaharek"
+  ],
   "config_flow": true,
   "issue_tracker": "https://github.com/amaharek/Muslim-Prayer-Companion/issues",
   "documentation": "https://github.com/amaharek/Muslim-Prayer-Companion",
   "iot_class": "cloud_polling",
-  "loggers": ["prayer_times_calculator_ie"],
   "version": "1.0.0"
 }
