--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-homeassistant==2024.10.4
+colorlog==6.9.0
+homeassistant==2025.2.4
+pip>=21.3.1
+ruff==0.9.6
 prayer_times_calculator==0.0.12
-ruff==0.7.2
