Rename domain and name in manifest.json to reflect updated component branding

--- a/custom_components/muslim-prayer-companion/manifest.json
+++ b/custom_components/muslim-prayer-companion/manifest.json
@@ -1,6 +1,6 @@
 {
-  "domain": "muslim-prayer-companion",
-  "name": "Muslim Prayer Companion",
+  "domain": "muslim-companion",
+  "name": "Muslim Companion",
   "codeowners": [
     "@amaharek"
   ],
