Update manifest.json and requirements.txt to include hijri-converter dependency

--- a/custom_components/muslim-prayer-companion/manifest.json
+++ b/custom_components/muslim-prayer-companion/manifest.json
@@ -1,9 +1,7 @@
 {
   "domain": "muslim-prayer-companion",
   "name": "Muslim Companion",
-  "codeowners": [
-    "@amaharek"
-  ],
+  "codeowners": ["@amaharek"],
   "config_flow": true,
   "issue_tracker": "https://github.com/amaharek/muslim-prayer-companion/issues",
   "documentation": "https://github.com/amaharek/muslim-prayer-companion",
