--- a/custom_components/muslim-prayer-companion/manifest.json
+++ b/custom_components/muslim-prayer-companion/manifest.json
@@ -6,6 +6,5 @@
   "issue_tracker": "https://github.com/amaharek/muslim-prayer-companion/issues",
   "documentation": "https://github.com/amaharek/muslim-prayer-companion",
   "iot_class": "cloud_polling",
-  "version": "2.1.3", 
-  "config_flow": true
+  "version": "2.1.3"
 }
