--- a/custom_components/muslim-prayer-companion/manifest.json
+++ b/custom_components/muslim-prayer-companion/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "muslim-prayer-companion",
-  "name": "Muslim Companion",
+  "name": "Muslim Prayer Companion",
   "codeowners": ["@amaharek"],
   "config_flow": true,
   "issue_tracker": "https://github.com/amaharek/muslim-prayer-companion/issues",
