--- a/custom_components/muslim-prayer-companion/manifest.json
+++ b/custom_components/muslim-prayer-companion/manifest.json
@@ -6,5 +6,6 @@
   "issue_tracker": "https://github.com/amaharek/muslim-prayer-companion/issues",
   "documentation": "https://github.com/amaharek/muslim-prayer-companion",
   "iot_class": "cloud_polling",
-  "version": "2.1.3"
+  "version": "2.1.3",
+  "requirements": ["prayer-times-calculator==0.0.12", "hijri-converter==0.0.3"],
 }
