--- a/custom_components/muslim-prayer-companion/manifest.json
+++ b/custom_components/muslim-prayer-companion/manifest.json
@@ -7,5 +7,5 @@
   "documentation": "https://github.com/amaharek/muslim-prayer-companion",
   "iot_class": "cloud_polling",
   "version": "2.1.4",
-  "requirements": ["prayer-times-calculator==0.0.12", "hijri-converter==0.0.3"],
+  "requirements": ["prayer-times-calculator==0.0.12", "hijri-converter==0.0.3"]
 }
