--- a/custom_components/muslim-prayer-companion/manifest.json
+++ b/custom_components/muslim-prayer-companion/manifest.json
@@ -6,6 +6,7 @@
   "issue_tracker": "https://github.com/amaharek/muslim-prayer-companion/issues",
   "documentation": "https://github.com/amaharek/muslim-prayer-companion",
   "iot_class": "cloud_polling",
-  "version": "2.1.10",
-  "requirements": ["prayer-times-calculator==0.0.12", "hijri-converter==2.3.1"]
+  "version": "2.1.11",
+  "requirements": ["prayer-times-calculator==0.0.12", "hijri-converter==2.3.1"], 
+  "icon": "mdi:mosque"
 }
