--- a/custom_components/muslim-prayer-companion/manifest.json
+++ b/custom_components/muslim-prayer-companion/manifest.json
@@ -8,5 +8,5 @@
   "iot_class": "cloud_polling",
   "version": "2.1.14",
   "requirements": ["prayer-times-calculator==0.0.12", "hijri-converter==2.3.1"], 
-  "icon": "mdi:mosque"
+  "icon": "mdi:mosque-outline"
 }
