--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ pytest = ">6.2.2"
 codespell = ">2.0.0"
 yamllint = ">1.26.0"
 pyupgrade = "^3.3.1"
+ruff = "0.9.6"
+prayer_times_calculator = "0.0.12"
+hijri-converter = "2.3.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
