--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -58,6 +58,7 @@ repos:
     rev: 5.13.2
     hooks:
       - id: isort
+        args: ["--profile", "black"]
   - repo: https://github.com/floatingpurr/sync_with_poetry
     rev: "1.1.0"
     hooks:
