--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,9 @@ hijri-converter = "2.3.1"
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.isort]
+profile = "black"
+
 [tool.black]
 line-length = 88
 target-version = ['py39']
