--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ ruff = "0.9.6"
 prayer_times_calculator = "0.0.12"
 hijri-converter = "2.3.1"
 
+[tool.pytest.ini_options]
+pythonpath = ["."]
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
